# backend/Modules/Review/routes/api.php
@@ -2,16 +2,20 @@
 
 use Illuminate\Support\Facades\Route;
 use Modules\Review\Http\Controllers\ReviewController;
-use Modules\Auth\Http\Middleware\JwtAuthenticate;
 
 Route::prefix('public/reviews')->group(function () {
-    Route::get('/', [ReviewController::class, 'index']); 
+    Route::get('/', [ReviewController::class, 'index']);     
     Route::get('/stats', [ReviewController::class, 'stats']); 
     Route::get('/{uuid}', [ReviewController::class, 'show']); 
 });
 
-Route::middleware(['auth:sanctum'])->prefix('reviews')->group(function () {
-    Route::post('/', [ReviewController::class, 'store']);
-    Route::put('/{uuid}', [ReviewController::class, 'update']);
-    Route::delete('/{uuid}', [ReviewController::class, 'destroy']);
+Route::middleware(['auth:sanctum'])->group(function () {
+    
+    Route::get('admin/reviews', [ReviewController::class, 'adminIndex']);
+
+    Route::prefix('reviews')->group(function () {
+        Route::post('/', [ReviewController::class, 'store']);     
+        Route::put('/{uuid}', [ReviewController::class, 'update']);   
+        Route::delete('/{uuid}', [ReviewController::class, 'destroy']); 
+    });
 });
